[Sheriff] Revert "Trusted Types: Store TrustedURL and TrustedScriptURL contents as string"

This reverts commit a54a0773e501aeb3b7149271149223632c478a71.

Reason for revert: flakiness https://findit-for-me.appspot.com/waterfall/flake/flake-culprit?key=ag9zfmZpbmRpdC1mb3ItbWVyQwsSDEZsYWtlQ3VscHJpdCIxY2hyb21pdW0vYTU0YTA3NzNlNTAxYWViM2I3MTQ5MjcxMTQ5MjIzNjMyYzQ3OGE3MQw

BUG=chromium:919833

Original change's description:
> Trusted Types: Store TrustedURL and TrustedScriptURL contents as string
> 
> Bug: 739170, 913180
> Change-Id: I01391891d89aeb55e387059ed4c4a4b92c6dcd7b
> Reviewed-on: https://chromium-review.googlesource.com/c/1375714
> Reviewed-by: Daniel Vogelheim <vogelheim@chromium.org>
> Reviewed-by: Mike West <mkwst@chromium.org>
> Commit-Queue: Daniel Vogelheim <vogelheim@chromium.org>
> Cr-Commit-Position: refs/heads/master@{#620299}

TBR=vogelheim@chromium.org,mkwst@chromium.org,jakubvrana@google.com

# Not skipping CQ checks because original CL landed > 1 day ago.

Bug: 739170, 913180
Change-Id: Ic3561942a74f6106d629c5f3a7b30014719bc7d5
Reviewed-on: https://chromium-review.googlesource.com/c/1405188
Reviewed-by: Roman Sorokin <rsorokin@chromium.org>
Commit-Queue: Roman Sorokin <rsorokin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#621617}