third_party/blink/renderer/core/trustedtypes/trusted_script_url.cc
@@ -5,12 +5,14 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "third_party/blink/renderer/core/trustedtypes/trusted_script_url.h"
 
+#include "third_party/blink/renderer/platform/wtf/text/wtf_string.h"
+
 namespace blink {
 
-TrustedScriptURL::TrustedScriptURL(const String& url) : url_(url) {}
+TrustedScriptURL::TrustedScriptURL(const KURL& url) : url_(url) {}
 
 String TrustedScriptURL::toString() const {
-  return url_;
+  return url_.GetString();
 }
 
 }  // namespace blink
